--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -25,6 +25,7 @@
     "angular2-jwt": "^0.2.3",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "fast-csv": "^2.4.1",
     "file-saver": "^1.3.8",
     "jquery": "^3.3.1",
