--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "*",
     "cloudinary": "^1.13.2",
     "cors": "*",
+    "crypto-js": "^3.1.9-1",
     "express": "*",
     "express-fileupload": "^0.4.0",
     "fast-csv": "^2.4.1",
