--- a/angular-src/package.json
+++ b/angular-src/package.json
@@ -23,6 +23,7 @@
     "@types/crypto-js": "^3.1.43",
     "angular2-json2csv": "^1.1.2",
     "angular2-jwt": "^0.2.3",
+    "asyncawait": "^1.0.7",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
