--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "*",
     "body-parser": "*",
     "cloudinary": "^1.13.2",
+    "compression": "^1.7.3",
     "cors": "*",
     "crypto-js": "^3.1.9-1",
     "express": "*",
